--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -20,5 +20,69 @@ body {
     to right,
     #434343,
     #000000
-  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  );
+  scroll-behavior: smooth; /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
+
+.event-bg {
+  position: relative;
+  background-color: black; /* Black background color */
+}
+
+.event-bg::before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url('../images/bg-event.avif');
+  opacity: 0.4; /* Image opacity of 10% */
+  background-size: cover; /* Adjust as needed */
+  background-position: center; /* Adjust as needed */
+  /* Add other background properties if needed */
+}
+
+
+.events-scroll {
+  animation: scroll 10s linear infinite; /* Adjust the duration and timing function as needed */
+}
+
+.text-black {
+  glow: text-glow(0.1px purple);
+}
+
+.marquee-w {
+  transform: translate(-50%, -50%);
+}
+
+.marquee pre  {
+  animation: marquee 5s linear infinite; /* Adjust the duration to make it faster */
+}
+
+.marquee2 pre  {
+  animation-delay: 1s; /* Match the animation duration for consistent speed */
+}
+
+@keyframes marquee {
+  0% {
+      transform: translate(0, 0);
+  }
+  100% {
+      transform: translate(-100%, 0);
+  }
+}
+
+.text-stroke-white {
+  -webkit-text-stroke: 1px white;
+  color: transparent;
+  font-weight: bolder;
+}
+
+.mix-blend-screen {
+  mix-blend-mode: screen;
+}   
+
+
+
