--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -85,4 +85,47 @@ body {
 }   
 
 
+span{
+	margin: 0 15px;
+	line-height: .7;
+	text-shadow: 0 0 2px rgba(0, 0, 0, .45);
+	animation: span 3s ease-in infinite alternate;
+}
+.main{
+	display: flex;
+	justify-content: center;
+	align-items: flex-start;
+  
+  	
+	@media(max-width: 600px){ transform: scale(.65); }
+}
+hr{
+  width : 100%;
+  border : 3px solid white;
+  	text-shadow: 0 0 2px rgba(0, 0, 0, .45);
+}
+
+.letter{
+	display: inline-flex;
+	height: 30px;
+	width: 27px;
+  align-items : center;
+	/* border: 2.5px solid #FF1EAD; */
+	border-top: 4px solid white;
+  border-bottom: 4px solid white;
+	/* // border-radius: 14px; */
+ border-left: 4px solid white;
+	animation: letter 3s ease-in-out infinite alternate;
+}
+@keyframes span {
+	0%,30%{ margin: 0 15px; }
+	70%,100%{ margin: 0 5px; }
+}
+@keyframes letter {
+	0%,30%{ width: 27px; }
+	70%,100%{ width: 30vw; }
+}
+
+
+
 
