--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -19,29 +19,22 @@ body {
   position: relative;
   background-color: black; /* Black background color */
 }
-
-.event-bg::before {
-  content: "";
-  display: block;
+.text-stroke::before {
+  content: attr(data-text);
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
-  background-image: url('../images/bg-event.avif');
-  opacity: 0.4; /* Image opacity of 10% */
-  background-size: cover; /* Adjust as needed */
-  background-position: center; /* Adjust as needed */
-  /* Add other background properties if needed */
+  z-index: -1;
+  color: black;  /* Color of the stroke */
+  -webkit-background-clip: text;
+  background-clip: text;
+  text-shadow: none;
 }
+
 
 
 .events-scroll {
   animation: scroll 10s linear infinite; /* Adjust the duration and timing function as needed */
-}
-
-.text-black {
-  glow: text-glow(0.1px purple);
 }
 
 .marquee-w {
@@ -92,20 +85,20 @@ span{
 }
 hr{
   width : 100%;
-  border : 3px solid white;
+  border : 5px solid black;
   	text-shadow: 0 0 2px rgba(0, 0, 0, .45);
 }
 
 .letter{
 	display: inline-flex;
-	height: 30px;
-	width: 27px;
+	height: 48px;
+	/* width: px; */
   align-items : center;
 	/* border: 2.5px solid #FF1EAD; */
-	border-top: 4px solid white;
-  border-bottom: 4px solid white;
+	border-top: 9px solid black;
+  border-bottom: 9px solid black;
 	/* // border-radius: 14px; */
- border-left: 4px solid white;
+ /* border-left: 4px solid white; */
 	animation: letter 3s ease-in-out infinite alternate;
 }
 @keyframes span {
@@ -113,7 +106,7 @@ hr{
 	70%,100%{ margin: 0 5px; }
 }
 @keyframes letter {
-	0%,30%{ width: 27px; }
+	0%,30%{ width: 40px; }
 	70%,100%{ width: 30vw; }
 }
 
