--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -1,7 +1,10 @@
 .typography {
   color: theme(colors.neutral.950);
   font-size: theme(fontSize.xl);
-  line-height: theme(fontSize.xl[1].lineHeight);
+  
+  
+  
+  t: theme(fontSize.xl[1].lineHeight);
 
   --shiki-color-text: theme(colors.white);
   --shiki-color-background: theme(colors.neutral.950);
