--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -23,12 +23,14 @@ body {
     ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
-.clip-polygon{
+.clip-polygon1{
     clip-path: polygon(0 20%, 20% 0, 100% 0, 100% 80%, 80% 100%, 0 100%) !important;
     backdrop-filter: blur(10px) !important;
     background-color: rgba(1, 1, 1, 0.5) !important;
 }
 
-
-
-
+.clip-polygon2{
+    clip-path: polygon(100% 20%, 80% 0, 0 0, 0 80%, 20% 100%, 100% 100%) !important;
+    backdrop-filter: blur(10px) !important;
+    background-color: rgba(1, 1, 1, 0.5) !important;
+}
