--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -260,6 +260,41 @@ hr{
   font-weight: bolder;
 }
 
+.marquee-container {
+  width: 100%;
+  height: 50px; /* Define the desired height */
+  overflow: hidden;
+  position: relative;
+}
+
+.marquee {
+  white-space: nowrap;
+  display: flex;
+  position: absolute;
+  animation: marquee 20s linear infinite; /* Adjust duration as needed */
+}
+
+.marquee-content {
+  display: inline-block;
+  padding: 0 20px; /* To create space between items */
+}
+
+@keyframes marquee {
+  0% {
+    transform: translateX(0%);
+  }
+  100% {
+    transform: translateX(calc(-100% * 2)); /* Display 2 times the width of the container */
+  }
+}
+
+.text-xl {
+  font-size: 1.25rem; /* Adjust font size as needed */
+}
+
+.font-bold {
+  font-weight: bold;
+}
 
 
 
