--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -174,7 +174,7 @@ hr{
 
 
 
-.circle {
+.circle2 {
   position: absolute;
   right:0%;
   width: 30%;
@@ -295,6 +295,39 @@ hr{
 .font-bold {
   font-weight: bold;
 }
+
+
+
+.circle {
+  position: fixed;
+  z-index: 100;
+  display: flex;
+  flex-flow: row;
+  align-content: center;
+  justify-content: center;
+  top: 0;
+  left: 0;
+  height: 10px;
+  width: 10px;
+  border-radius: 200px;
+  pointer-events: none;
+  color: #fff;
+  text-align: center;
+  font-size: 16px;
+}
+
+.cursorText {
+  flex: auto;
+  font-size: inherit;
+  pointer-events: none;
+  margin: auto;
+}
+
+
+
+
+
+
 
 
 
