--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -296,7 +296,9 @@ hr{
   font-weight: bold;
 }
 
-
+.container{
+  cursor: none;
+}
 
 .circle {
   position: fixed;
@@ -307,14 +309,26 @@ hr{
   justify-content: center;
   top: 0;
   left: 0;
-  height: 10px;
-  width: 10px;
-  border-radius: 200px;
+  height: 100px; /* Adjust the size as needed */
+  width: 100px; /* Adjust the size as needed */
+  border-radius: 50%;
   pointer-events: none;
-  color: #fff;
+  background-image: url('/arrow.png');
+  background-size: 50%;
+  background-position: 55% center; 
+  background-repeat: no-repeat;
   text-align: center;
   font-size: 16px;
 }
+
+/* Optional: Add some padding to center text within the circle */
+.circle::after {
+  content: "";
+  flex: 1;
+}
+
+
+
 
 .cursorText {
   flex: auto;
