--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -377,15 +377,15 @@ hr{
 
 @keyframes rocketUp {
   from {
-    transform: translateY(0);
+    transform: translateY(200px);
   }
   to {
-    transform: translateY(-10000px); /* Adjust the distance as needed */
+    transform: translateY(0); /* Adjust the distance as needed */
   }
 }
 
 .rocketUp{
-  animation: rocketUp 10s forwards cubic-bezier(0.25, 0.1, 0.25, 1);
+  animation: rocketUp 2s forwards cubic-bezier(0.25, 0.1, 0.25, 1);
 }
 
 
